--- a/index.Rmd
+++ b/index.Rmd
@@ -105,7 +105,7 @@ tribble( ~Sarah, ~Tyson,
       "[www.SarahSchwartzStats.com](http://www.sarahschwartzstats.com/) ",
       "[www.TysonBarrett.com](http://tysonbarrett.com/)",
       "Sarah.Schwartz@usu.edu",
-      "Tyson.Battett@usu.edu",
+      "Tyson.Barrett@usu.edu",
       "[Statistical Consulting Studio](https://cehs.usu.edu/research/statstudio/index)",
       "[Data Science and Discover Unit](https://cehs.usu.edu/research/dsdu/index)",
       "![](images/common/StatStudioLogo_dark_small.png){width=300px}",
