--- a/index.Rmd
+++ b/index.Rmd
@@ -76,23 +76,12 @@ This is how $R$ code is shown:
 1 + 1
 ```
 
-THis is what the output of the $R$ code above will look:
+This is what the output of the $R$ code above will look:
 
 ```{r, echo=FALSE}
 # This is a Code Chunk
 1 + 1
 ```
-
-
-## Why choose R ?  {-}
-
-
-```{block type='rmdlink', echo=TRUE}
-**Check it out:** an article from Fall 2016... [No more excuses: R is better than SPSS for psychology undergrads, and students agree](https://datahowler.wordpress.com/2016/09/10/no-more-excuses-r-is-better-than-spss-for-psychology-undergrads-and-students-agree/)
-```
-
-
-
 
 
 ## The Authors {-}
@@ -118,7 +107,18 @@ tribble( ~Sarah, ~Tyson,
                        font_size = 20)
 ```
 
-## FYI  {-}
+
+
+### Why choose R ?  {-}
+
+
+```{block type='rmdlink', echo=TRUE}
+**Check it out:** an article from Fall 2016... [No more excuses: R is better than SPSS for psychology undergrads, and students agree](https://datahowler.wordpress.com/2016/09/10/no-more-excuses-r-is-better-than-spss-for-psychology-undergrads-and-students-agree/)
+```
+
+
+
+### FYI  {-}
 
 This entire encyclopedia is written in $R Markdown$, using $R Studio$ as the text editor and the `bookdown` package to turn a collection of markdown documents into a coherent whole. The book's source code is hosted on GitHub. If you notice typos or other issues, feel free to email either of the authors.
 
