--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,11 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@book{hox2017,
+  title={Multilevel analysis: Techniques and applications},
+  author={Hox, Joop J and Moerbeek, Mirjam and Van de Schoot, Rens},
+  year={2017},
+  edition={3},
+  publisher={Routledge}
+}
