--- a/packages.bib
+++ b/packages.bib
@@ -6,12 +6,89 @@
   year = {2018},
   url = {https://www.R-project.org/},
 }
+@Manual{R-bindrcpp,
+  title = {bindrcpp: An 'Rcpp' Interface to Active Bindings},
+  author = {Kirill Müller},
+  year = {2018},
+  note = {R package version 0.2.2},
+  url = {https://CRAN.R-project.org/package=bindrcpp},
+}
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2018},
   note = {R package version 0.7},
   url = {https://CRAN.R-project.org/package=bookdown},
+}
+@Manual{R-car,
+  title = {car: Companion to Applied Regression},
+  author = {John Fox and Sanford Weisberg and Brad Price},
+  year = {2018},
+  note = {R package version 3.0-1},
+  url = {https://CRAN.R-project.org/package=car},
+}
+@Manual{R-carData,
+  title = {carData: Companion to Applied Regression Data Sets},
+  author = {John Fox and Sanford Weisberg and Brad Price},
+  year = {2018},
+  note = {R package version 3.0-1},
+  url = {https://CRAN.R-project.org/package=carData},
+}
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2018},
+  note = {R package version 0.7.6},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2018},
+  note = {R package version 0.3.0},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+@Manual{R-furniture,
+  title = {furniture: Tables for Quantitative Scientists},
+  author = {Tyson S. Barrett and Emily Brignone and Daniel J. Laxman},
+  year = {2018},
+  note = {R package version 1.7.9},
+  url = {https://CRAN.R-project.org/package=furniture},
+}
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
+  year = {2018},
+  note = {R package version 3.0.0},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+@Manual{R-gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
+}
+@Manual{R-haven,
+  title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
+  author = {Hadley Wickham and Evan Miller},
+  year = {2018},
+  note = {R package version 1.1.2},
+  url = {https://CRAN.R-project.org/package=haven},
+}
+@Manual{R-HLMdiag,
+  title = {HLMdiag: Diagnostic Tools for Hierarchical (Multilevel) Linear Models},
+  author = {Adam Loy},
+  year = {2015},
+  note = {R package version 0.3.1},
+  url = {https://CRAN.R-project.org/package=HLMdiag},
+}
+@Manual{R-kableExtra,
+  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2018},
+  note = {R package version 0.9.0},
+  url = {https://CRAN.R-project.org/package=kableExtra},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
@@ -20,10 +97,109 @@
   note = {R package version 1.20},
   url = {https://CRAN.R-project.org/package=knitr},
 }
+@Manual{R-lme4,
+  title = {lme4: Linear Mixed-Effects Models using 'Eigen' and S4},
+  author = {Douglas Bates and Martin Maechler and Ben Bolker and Steven Walker},
+  year = {2018},
+  note = {R package version 1.1-18-1},
+  url = {https://CRAN.R-project.org/package=lme4},
+}
+@Manual{R-lmerTest,
+  title = {lmerTest: Tests in Linear Mixed Effects Models},
+  author = {Alexandra Kuznetsova and Per {Bruun Brockhoff} and Rune {Haubo Bojesen Christensen}},
+  year = {2018},
+  note = {R package version 3.0-1},
+  url = {https://CRAN.R-project.org/package=lmerTest},
+}
+@Manual{R-Matrix,
+  title = {Matrix: Sparse and Dense Matrix Classes and Methods},
+  author = {Douglas Bates and Martin Maechler},
+  year = {2018},
+  note = {R package version 1.2-14},
+  url = {https://CRAN.R-project.org/package=Matrix},
+}
+@Manual{R-nlme,
+  title = {nlme: Linear and Nonlinear Mixed Effects Models},
+  author = {José Pinheiro and Douglas Bates and {R-core}},
+  year = {2018},
+  note = {R package version 3.1-137},
+  url = {https://CRAN.R-project.org/package=nlme},
+}
+@Manual{R-psych,
+  title = {psych: Procedures for Psychological, Psychometric, and Personality
+Research},
+  author = {William Revelle},
+  year = {2018},
+  note = {R package version 1.8.4},
+  url = {https://CRAN.R-project.org/package=psych},
+}
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2018},
+  note = {R package version 0.2.5},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+}
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
+  year = {2017},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=readr},
+}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
   year = {2018},
   note = {R package version 1.10},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+@Manual{R-stargazer,
+  title = {stargazer: Well-Formatted Regression and Summary Statistics Tables},
+  author = {Marek Hlavac},
+  year = {2018},
+  note = {R package version 5.2.2},
+  url = {https://CRAN.R-project.org/package=stargazer},
+}
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2018},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+@Manual{R-texreg,
+  title = {texreg: Conversion of R Regression Output to LaTeX or HTML Tables},
+  author = {Philip Leifeld},
+  year = {2017},
+  note = {R package version 1.36.23},
+  url = {https://CRAN.R-project.org/package=texreg},
+}
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2018},
+  note = {R package version 1.4.2},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+@Manual{R-tidyr,
+  title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2018},
+  note = {R package version 0.8.1},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+@Manual{R-tidyverse,
+  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 1.2.1},
+  url = {https://CRAN.R-project.org/package=tidyverse},
 }
