--- a/packages.bib
+++ b/packages.bib
@@ -161,6 +161,14 @@ Research},
   note = {R package version 1.10},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
+@Manual{R-sjstats,
+  title = {sjstats: Collection of Convenient Functions for Common Statistical
+Computations},
+  author = {Daniel Lüdecke},
+  year = {2018},
+  note = {R package version 0.17.0},
+  url = {https://CRAN.R-project.org/package=sjstats},
+}
 @Manual{R-stargazer,
   title = {stargazer: Well-Formatted Regression and Summary Statistics Tables},
   author = {Marek Hlavac},
