--- a/packages.bib
+++ b/packages.bib
@@ -24,7 +24,7 @@
   title = {car: Companion to Applied Regression},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-1},
+  note = {R package version 3.0-2},
   url = {https://CRAN.R-project.org/package=car},
 }
 @Manual{R-carData,
@@ -124,6 +124,13 @@
   year = {2018},
   note = {R package version 3.1-137},
   url = {https://CRAN.R-project.org/package=nlme},
+}
+@Manual{R-optimx,
+  title = {optimx: A Replacement and Extension of the optim() Function},
+  author = {John C Nash and Ravi Varadhan},
+  year = {2014},
+  note = {R package version 2013.8.7},
+  url = {https://CRAN.R-project.org/package=optimx},
 }
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
